Revised ch 1 based on Clements's feedback.

--- a/chapter-1.tex
+++ b/chapter-1.tex
@@ -1,12 +1,12 @@
 \chapter{Introduction}
 
-Software components comprise various programming languages, interfaces, and execution platforms.  Components of homogeneous configurations of these and other properties cooperate more easily than components of heterogeneous configurations interoperate.  This relative ease encourages components to be redefined in common configurations, rather than reusing existing solutions to problems from less common configurations.  Components of different languages interoperate by exchanging a common set of values across boundaries between their languages.  Language boundaries convert values from one form to another and ensure that interoperation does not violate any language property.  Language incompatibilities complicate interoperation and arise where equivalent forms of values do not exist or where interoperation would violate a language property.  This paper explores and resolves three such incompatibilities with a model of computation, proves its type soundness, and describes an implementation of it.
+The complexities of software interoperation in part engender the proverbial reinvention of the wheel.  Programmers forgo preexisting solutions to problems where interoperation proves too cumbersome; they reimplement software components, rather than reuse them.  Disparate programming language features and constructs complicate the conversion of values exchanged between components of different languages.  Resolving language incompatibilities transparently at boundaries between component languages facilitates interoperation by unburdening programmers.  This paper explores and resolves three such incompatibilities with a model of computation, proves its type soundness, and describes an implementation of it.
 
-The first incompatibility is evaluation strategies.  Evaluation strategies determine the order in which languages evaluate expressions.  Eager evaluation evaluates expressions regardless of necessity, and lazy evaluation evaluates expressions only where necessary.  Lazy languages --- languages that use lazy evaluation --- can construct infinite streams as lists because they do not evaluate list elements when lists are constructed, but eager languages cannot because they do.  Lazy lists --- lists in lazy languages --- are equivalent to eager lists if the sequences of elements are equivalent.  Since there exist lazy lists for which no equivalent eager lists exist, lazy lists crossing to eager languages are not converted to eager lists.  Instead, elements of lazy lists are converted when accessed by eager languages if they are not lazy lists too.
+The first incompatibility is evaluation strategies.  Evaluation strategies determine the order in which languages evaluate expressions.  Eager evaluation evaluates expressions regardless of necessity, and lazy evaluation evaluates expressions only where necessary.  Lazy languages --- languages that use lazy evaluation --- can construct infinite streams as lists because they do not evaluate list elements when lists are constructed, but eager languages cannot because they do.  Since there exist lazy lists --- lists in lazy languages --- for which no naturally equivalent eager lists exist, lazy lists crossing to eager languages are not converted to eager lists.  Instead, elements of lazy lists are converted when accessed by eager languages if they are not lazy lists too.
 
-The second incompatibility is type systems.  Static type systems calculate and validate the types of expressions before run time, thereby ensuring that well-typed programs do not encounter type errors during run time.  Dynamic type systems detect invalid operations on values during run time and do not calculate or validate the types of expressions.  Dynamically-typed languages --- languages that use dynamic type systems --- can use value predicates to calculate the kinds of values during run time.  Statically-typed languages must verify at boundaries that the expected types of received values match their actual types.  Mismatched expected and actual types could cause type errors during run time and violate type soundness.  The actual types of values to be sent from statically-typed languages can be calculated and validated before run time.  Ad-hoc polymorphism in dynamically-typed languages enables argument types to determine polymorphic function behavior.  Since determining function behavior is undecidable \cite{blume04}, actual types for these functions cannot be reliably calculated at boundaries.  Instead, they are wrapped in contracts \cite{findler02} that defer the checking of their argument and result types until they are used during run time.  If they are never used, their types cannot be checked, but neither can they cause type errors.
+The second incompatibility is type systems.  Static type systems calculate and validate the types of expressions before run time, thereby ensuring that well-typed programs do not encounter type errors during run time.  Dynamic type systems detect invalid operations on values using value predicates during run time and do not calculate or validate the types of expressions.  Statically-typed languages --- languages that use static type systems --- that receive values from dynamically-typed languages must verify that the values match their expected types.  Languages are assumed to exchange a common set of values that can be checked straightforwardly without coercion.  Mismatched values and expected types could cause type errors during run time and violate type soundness.  Ad-hoc polymorphism in dynamically-typed languages enables argument types to determine polymorphic function behavior.  Since determining function behavior is undecidable \cite{blume04}, actual types for these functions cannot be reliably calculated at language boundaries and compared to expected types.  Instead, they are wrapped in contracts \cite{findler02} that defer the checking of their argument and result types until they are used during run time.  If they are never used, their types cannot be checked, but neither can they cause type errors.
 
-The third incompatibility is parametricity.  Parametricity constrains the kinds of parametric polymorphic functions that are well-typed.  Parametric polymorphism in statically-typed languages enables the types of functions to be parameterized by type variables and type abstractions and then instantiated by applying type abstractions to types.  Parametricity ensures that parametric polymorphic functions behave the same regardless of the types and values of their arguments, and that polymorphic results correspond to polymorphic arguments of the same type variables.  Functions from dynamically-typed languages can violate parametricity with value predicates and conditions or by evaluating to results of the wrong type variables.  Languages with parametricity that use these functions as parametric polymorphic functions risk violating their parametricity.  Arguments for these functions must be obscured such that value predicates and conditions cannot examine them and annotated with their type variables such that the type variables of polymorphic results can be validated.
+The third incompatibility is parametricity.  Parametric polymorphism in statically-typed languages enables function types to be abstracted with type variables and then instantiated into concrete types.  Parametricity constrains the behavior of parametric polymorphic functions by ensuring that they behave the same regardless of the types and values of their arguments, and that functions with instantiated result types produce as their results the arguments associated with the same instantiated types.  Functions from dynamically-typed languages that use value predicates or conditions on arguments and are used as parametric polymorphic functions by languages that have parametricity can violate their parametricity.  Arguments for these functions must be obscured such that value predicates and conditions cannot examine them and annotated to ensure the correct ones are produced as results.
 
 The languages in the model must be able to express programs in which the aforementioned three incompatibilities arise.  Haskell, ML, and Scheme each possess a unique combination of properties that together are sufficient for this purpose: Haskell and ML use static type systems and have parametricity, ML and Scheme use eager evaluation, Haskell uses lazy evaluation, and Scheme uses a dynamic type system.
 
