--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -1,48 +1,32 @@
 \chapter{Model of Computation}
 
-Embedding languages within languages as expressions succinctly expresses the value exchange of interoperation.  Special syntactic forms, called boundaries, wrap embedded expressions and indicate a change of language and the expected and actual types of exchanged values.  Embedded expressions evaluate to values and their boundaries convert to equivalent values.  Value conversion represents the sending and receiving of values.  Since Haskell, ML, and Scheme are functional languages, extended lambda calculi naturally represent and simplify them.
+The model of computation represents Haskell, ML, and Scheme with lambda calculus extended in various ways.  Expressions represent software components, and nesting component expressions expresses interoperation between them, where the inner component expression evaluates to the value given to the outer component expression.  Boundary expressions separate interoperating component expressions of different languages, indicate inner and outer languages, and declare the expected and actual types of the given values.  The reduction of boundary expressions converts values between languages.  The model extends the model of Kinghorn \cite{kinghorn07}, which extended the model of Matthews and Findler \cite{matthews07}.  The model comprises smaller models to ease comprehension and simplify organization.
 
-\section{Core Calculi}
+\section{Core Models}
 
-The core calculi are the subset of the model that define the languages, but do not make provisions for interoperation.
+The core models are the subset of the model that define the languages, but do not make provisions for interoperation.
 
-\subsection{Haskell}
+\subsection{Haskell Model}
 
-Lambda calculus is comprised of functions, variables, and function applications.  Haskell extends lambda calculus in several ways.  First, it adds natural numbers, addition and subtraction operations for natural numbers, and a condition that uses the natural number zero as true and all other natural numbers as false.
+The core Haskell model comprises the variables, functions, and function applications of lambda calculus; the type variables, type abstractions, and type applications of System F \cite{pierce02}; natural numbers and arithmetic operations; lists and list operations; conditions that use the natural number zero as true all other natural numbers as false; fixed-point operations; error reports; and types for type abstractions and all values.  Empty lists, functions, and error reports have type annotations to enable the calculation of their types.  Haskell values and evaluation contexts conform to an extended call-by-name (lazy) evaluation strategy.  Letter subscripts of grammar non-terminals denote the language to which they belong, and numbered superscripts denote individual instances of them.  Variable and type variable names are assumed to be unique across all languages.  See Figure \ref{hce} for the Haskell core grammar and evaluation contexts.
 
-Second, it adds list constructions that contain head and tail expressions, empty lists, operations to access head and tail expressions, a condition that uses empty lists as true and list constructions as false, and error reports for head and tail operations that operate on empty lists.
+\input{model/hce.tex}
 
-Third, it adds a static type system called System F.  System F adds types for natural numbers, lists, and functions and the expressions that contain them.  If the type of an expression is valid, it is well-typed; otherwise, it is ill-typed.  Type errors cannot occur in well-typed expressions.  Haskell does not compute ill-typed expressions.  It adds type annotations to empty lists, functions, and error reports to enable the calculation of their types.  It adds type variables, type abstractions, type applications, and types for type variables and type abstractions to enable parametric polymorphism.  It adds a fixed-point operation, without which Haskell could not express recursive functions and therefore would be Turing-incomplete.
+$\Gamma\vdash_{H}e_{H}:T$ denotes the Haskell typing relation.  An expression $e_{H}$ is well-typed within the context $\Gamma$ if there is some type $T$ such that $\Gamma\vdash_{H}e_{H}:T$ is derivable.  $\Gamma\vdash_{H}T$ asserts the type $T$ is well-formed within the context $\Gamma$.  Where the context is empty, it is omitted from typing judgments.  Programs that contain free variables or free type variables are ill-typed.  Type equivalence is computed up to alpha-equivalence on bound type variables.  Letter subscripts of type relations denote the language to which they belong.  $T_{1}[T_{2}/X]$ denotes the substitution of type $T_{2}$ for free occurrences of type variable $X$ within type $T_{1}$.  Number subscripts and superscripts of grammar non-terminals in typing rules denote individual instances of them, but are absent where instances are unambigious.  See Figure \ref{hctr} for the Haskell core typing rules.
 
-Fourth, the values and evaluation contexts of Haskell conform to an extended call-by-name (lazy) evaluation strategy.
+\input{model/hctr.tex}
 
-Types, denoted $T$, are comprised of the natural number type, denoted $N$; type variables, denoted $X$; function types, denoted $T\rightarrow T$; universally-quantified (forall) types, denoted $\forall X.T$; and list types, denoted $[T]$.
+$e_{H}^{1}[e_{H}^{2}/x]$ denotes the substitution of expression $e_{H}^{2}$ for free occurrences of variable $x$ within expression $e_{H}^{1}$.  Variable instances that occur on the right side of a reduction rule, but not its left, are new and unique.  Error reports reduce to errors and terminate the computation.  All reduction rules are defined with an unspecified evaluation context $\mathscr{E}$.  The evaluation of a single language instantiates $\mathscr{E}$ to $E_{H}$ for Haskell, to $E_{M}$ for ML, and to $E_{S}$ for Scheme.  Language interoperation instantiates $\mathscr{E}$ according to the language in which programs begin and end.  $\mathscr{E}$ is implicitly instantiated correctly in later examples.
 
-Haskell values, denoted $v_{H}$, are comprised of natural numbers, denoted $\overline{n}$, which syntactically represents the natural number $n$; list constructions, denoted $\mathtt{cons}$ $e_{H}$ $e_{H}$; empty lists, denoted $\mathtt{nil}^{T}$; functions, denoted $\lambda x:T.e_{H}$; and type abstractions, denoted $\Lambda X.e_{H}$.  Letter subscripts of grammar non-terminals denote the language to which they belong.
+\input{model/hcos.tex}
 
-Haskell expressions, denoted $e_{H}$, are comprised of variables, denoted $x$; function applications, denoted $e_{H}$ $e_{H}$; type applications, denoted $e_{H}$ $\lbrace T\rbrace$; addition and subtraction operations, denoted $+$ $e_{H}$ $e_{H}$ and $-$ $e_{H}$ $e_{H}$, respectively; natural number conditions, denoted $\mathtt{if0}$ $e_{H}$ $e_{H}$ $e_{H}$; head and tail operations, denoted $\mathtt{hd}$ $e_{H}$ and $\mathtt{tl}$ $e_{H}$, respectively; list conditions, denoted $\mathtt{ifnil}$ $e_{H}$ $e_{H}$ $e_{H}$; fixed-point operations, denoted $\mathtt{fix}$ $e_{H}$; and error reports, denoted $\mathtt{wrong}^{T}$ string.
-
-Variables and type variables are unique across all languages.  Alpha conversion implicitly resolves name conflicts.
-
-Haskell evaluation contexts, denoted $E_{H}$, are comprised of the Haskell hole, denoted $[\,]_{H}$; left subexpressions of function applications, denoted $E_{H}$ $e_{H}$; subexpressions of type applications, denoted $E_{H}$ $\lbrace T\rbrace$; left operands of arithmetic operations, denoted $o$ $E_{H}$ $e_{H}$; right operands of arithmetic operations if left operands are values, denoted $o$ $v_{H}$ $E_{H}$; guards of natural number conditions, denoted $\mathtt{if0}$ $E_{H}$ $e_{H}$ $e_{H}$; operands of head and tail operations, denoted $f$ $E_{H}$; guards of list conditions, denoted $\mathtt{ifnil}$ $E_{H}$ $e_{H}$ $e_{H}$; and operands of fixed-point operations, denoted $\mathtt{fix}$ $E_{H}$.
-
-$\Gamma\vdash_{H}e_{H}:T$ denotes the Haskell typing relation.  An expression $e_{H}$ is well-typed within the context $\Gamma$ if there is some type $T$ such that $\Gamma\vdash_{H}e_{H}:T$.  Programs that contain free variables or free type variables are ill-typed.  $\Gamma,x:T$ and $\Gamma,X$ denote adding assumptions about the type of variable $x$ and the binding of type variable $X$, respectively.  $\Gamma\vdash_{H}T$ asserts the type $T$ is well-formed within the context $\Gamma$.  Where the context is empty, it is omitted from typing statements.  Letter subscripts of type relations denote the language to which they belong.
-
-Natural numbers, addition and subtraction operations and their operands, and guards of natural number conditions have the natural number type.  Functions, left subexpressions of function applications, and operands of fixed-point operations have function types.  Type abstractions and subexpressions of type applications have forall types.  List constructions, tails of list constructions, empty lists, tail operations, operands of head and tail operations, and guards of list conditions have type list types.
-
-Variables have the types they are assumed to have by the context.  If the context does not assume the type of a variable, the variable is free and the expression is ill-typed.  If the context does not assume the binding of a type variable, the type variable is free and the expression is ill-typed.  $T_{1}[T_{2}/X]$ denotes the substitution of $T_{2}$ for free occurrences of $X$ within $T_{1}$.  Number subscripts and superscripts of grammar symbols in typing rules denote distinct instances of them, but are absent where instances are unambigious.
-
-Haskell computations are defined by an operational semantics.  Function applications substitute function arguments for free occurrences of function parameters within function bodies.  Type applications substitute type arguments for free occurrences of type abstraction parameters within type abstraction bodies.  Addition and subtraction operations reduce to the addition and subtraction of their operands, respectively.  Natural number conditions reduce to their true or false alternatives if their guards are zero or not zero, respectively.  Head and tail operations on list constructions reduce to the heads and tails of their operands, respectively.  Head and tail operations on empty lists reduce to error reports.  List conditions reduce to their true or false alternatives if their guards are empty lists or list constructions, respectively.  Fixed-point operations reduce to their operands, which are functions, substituted for free occurrences of their function parameters within their function bodies.  Error reports reduce to errors and terminate the computation.
-
-$e_{H}^{1}[e_{H}^{2}/x]$ denotes the substitution of $e_{H}^{2}$ for free occurrences of $x$ within $e_{H}^{1}$.  Variable instances that occur only on the right sides of rewrite rules are unique.  All rewrite rules are defined with an unspecified evaluation context $\mathscr{E}$.  The evaluation of a single language would instantiate $\mathscr{E}$ to $E_{H}$ for Haskell, to $E_{M}$ for ML, and to $E_{S}$ for Scheme.  The interoperation of languages would instantiate $\mathscr{E}$ according to the language in which programs begin and end.
-
-\subsection{ML}
+\subsection{ML Model}
 
 ML is identical to Haskell except that it uses an extended call-by-value (eager) evaluation strategy.  This difference affects list constructions and evaluation contexts.  Since Haskell reduces expressions only where necessary, and ML reduces expressions regardless of necessity, their definitions of values are different.  Haskell list constructions are values regardless of whether their heads and tails are values, but ML list constructions are values only where their heads and tails are values.  To reflect these differences, ML adds a list construction expression where the head and tail are expressions, denoted $\mathtt{cons}$ $e_{M}$ $e_{M}$, and changes the head and tail of its list construction value to values, denoted $\mathtt{cons}$ $v_{M}$ $v_{M}$.
 
 ML evaluation contexts extend Haskell evaluation contexts such that all expressions are reduced and the order of evaluation is deterministic.  In addition to the Haskell definition, ML evaluation contexts are right subexpressions of function applications where left subexpressions are values, heads of list constructions, and tails of list construction where heads are values.
 
-\subsection{Scheme}
+\subsection{Scheme Model}
 
 Scheme is identical to ML except that it removes the static type system and adds a dynamic type system.  It removes all the types and type annotations for functions, empty lists, and error reports.  It removes type abstractions and type applications and the evaluation contexts, typing rules, and rewrite rules that contain them.
 
@@ -54,19 +38,18 @@ It adds a single type called The Scheme Type, $TST$.  Well-typed expressions hav
 
 It changes the natural number condition to reduce to one if the guard is not zero, and possibly not a natural number.  It changes the list condition to reduce to one if the guard is not an empty list, and possibly not a list.  The value predicates reduce to $\overline{0}$ if true and $\overline{1}$ if false.
 
-\input{model/hce.tex}
 \input{model/mce.tex}
 \input{model/sce.tex}
-\input{model/hctr.tex}
+
 \input{model/mctr.tex}
 \input{model/sctr.tex}
-\input{model/hcos.tex}
+
 \input{model/mcos.tex}
 \input{model/scos.tex}
 
 \clearpage
 
-\section{Interoperation Calculi}
+\section{Interoperation Models}
 
 The interoperation calculi extend the core calculi with new expressions, evaluation contexts, typing rules, and rewrite rules to enable interoperation.  They add boundary expressions, which represent values with actual and expected types crossing between languages.  Boundaries are denoted by two-letter acronyms, where the first letter names clients and the second letter names servers.  Expected types are superscripts to the left of the first letters, and actual types are superscripts to the right of the second letters.  Expressions to be reduced to values and cross languages are to the right of the letters and types, separated by a space.  For example, the expression $^{T_{1}}HM^{T_{2}}$ $e_{M}$ denotes $e_{M}$ with expected (Haskell) type $T_{1}$ and actual (ML) type $T_{2}$ crossing from ML to Haskell.  Boundaries can be nested within each other to express interoperation between more than two languages.  Since a set of $n$ interoperable languages requires $n\times(n-1)$ boundaries, this model requires six boundaries.
 
