Restructured model directory into hierarchy.

--- a/model/core/haskell/grammar.tex
+++ b/model/core/haskell/grammar.tex
@@ -31,6 +31,6 @@ $E_{H}$ & $=$ & $[\,]_{H}$ $\vert$ $E_{H}$ $e_{H}$ $\vert$ $E_{H}$ $\lbrace T\rb
 
 && $\vert$ $\mathtt{ifnil}$ $E_{H}$ $e_{H}$ $e_{H}$ $\vert$ $\mathtt{fix}$ $E_{H}$
 \end{tabular}
-\caption{Haskell core expressions}
+\caption{Core Haskell grammar and evaluation contexts}
 \label{hce}
 \end{figure}
