--- a/model/core/ml/grammar.tex
+++ b/model/core/ml/grammar.tex
@@ -35,6 +35,6 @@ $E_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $E_{M}$ $\ver
 
 && $\vert$ $\mathtt{ifnil}$ $E_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{fix}$ $E_{M}$
 \end{tabular}
-\caption{ML core expressions}
+\caption{Core ML grammar and evaluation contexts}
 \label{mce}
 \end{figure}
