--- a/model/core/scheme/grammar.tex
+++ b/model/core/scheme/grammar.tex
@@ -31,6 +31,6 @@ $E_{S}$ & $=$ & $[\,]_{S}$ $\vert$ $E_{S}$ $e_{S}$ $\vert$ $v_{S}$ $E_{S}$ $\ver
 
 && $\vert$ $\mathtt{cons}$ $v_{S}$ $E_{S}$ $\vert$ $f$ $E_{S}$ $\vert$ $\mathtt{ifnil}$ $E_{S}$ $e_{S}$ $e_{S}$ $\vert$ $p$ $E_{S}$
 \end{tabular}
-\caption{Scheme core expressions}
+\caption{Core Scheme grammar and evaluation contexts}
 \label{sce}
 \end{figure}
