--- a/model/core/haskell/grammar.tex
+++ b/model/core/haskell/grammar.tex
@@ -1,4 +1,4 @@
-\begin{figure}[b!]
+\begin{figure}[p]
 \centering
 \begin{tabular}{lcl}
 $e_{H}$ & $=$ & $v_{H}$ $\vert$ $x$ $\vert$ $e_{H}$ $e_{H}$ $\vert$ $e_{H}$ $\lbrace T\rbrace$ $\vert$ $o$ $e_{H}$ $e_{H}$ $\vert$ $\mathtt{if0}$ $e_{H}$ $e_{H}$ $e_{H}$ $\vert$ $f$ $e_{H}$ \\
@@ -32,5 +32,5 @@ $E_{H}$ & $=$ & $[\,]_{H}$ $\vert$ $E_{H}$ $e_{H}$ $\vert$ $E_{H}$ $\lbrace T\rb
 && $\vert$ $\mathtt{ifnil}$ $E_{H}$ $e_{H}$ $e_{H}$ $\vert$ $\mathtt{fix}$ $E_{H}$
 \end{tabular}
 \caption{Core Haskell grammar and evaluation contexts}
-\label{hce}
+\label{chg}
 \end{figure}
