--- a/model/core/haskell/typing-rules.tex
+++ b/model/core/haskell/typing-rules.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \[
 \frac{}{\vdash_{H}N}
 \quad
@@ -48,6 +48,6 @@
 \[
 \frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}\mathtt{wrong}^{T}\;\mathrm{string}:T}
 \]
-\caption{Haskell core typing rules}
-\label{hctr}
+\caption{Core Haskell typing rules}
+\label{chtr}
 \end{figure}
