--- a/model/core/ml/grammar.tex
+++ b/model/core/ml/grammar.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \centering
 \begin{tabular}{lcl}
 $e_{M}$ & $=$ & $v_{M}$ $\vert$ $x$ $\vert$ $e_{M}$ $e_{M}$ $\vert$ $e_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{if0}$ $e_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $e_{M}$ $e_{M}$ \\
@@ -36,5 +36,5 @@ $E_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $E_{M}$ $\ver
 && $\vert$ $\mathtt{ifnil}$ $E_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{fix}$ $E_{M}$
 \end{tabular}
 \caption{Core ML grammar and evaluation contexts}
-\label{mce}
+\label{cmg}
 \end{figure}
