--- a/model/core/ml/operational-semantics.tex
+++ b/model/core/ml/operational-semantics.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \centering
 \begin{tabular}{l}
 \vspace{5pt}
@@ -57,6 +57,6 @@ $\mathscr{E}[\mathtt{fix}$ $(\lambda x:T.e_{M})]_{M}\rightarrow\mathscr{E}[e_{M}
 
 $\mathscr{E}[\mathtt{wrong}^{T}$ string$]_{M}\rightarrow$ \textbf{Error}: string 
 \end{tabular}
-\caption{ML core operational semantics}
-\label{mcos}
+\caption{Core ML operational semantics}
+\label{cmos}
 \end{figure}
