--- a/model/core/scheme/grammar.tex
+++ b/model/core/scheme/grammar.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \centering
 \begin{tabular}{lcl}
 $e_{S}$ & $=$ & $v_{S}$ $\vert$ $x$ $\vert$ $e_{S}$ $e_{S}$ $\vert$ $o$ $e_{S}$ $e_{S}$ $\vert$ $\mathtt{if0}$ $e_{S}$ $e_{S}$ $e_{S}$ $\vert$ $\mathtt{cons}$ $e_{S}$ $e_{S}$ $\vert$ $f$ $e_{S}$ \\
@@ -32,5 +32,5 @@ $E_{S}$ & $=$ & $[\,]_{S}$ $\vert$ $E_{S}$ $e_{S}$ $\vert$ $v_{S}$ $E_{S}$ $\ver
 && $\vert$ $\mathtt{cons}$ $v_{S}$ $E_{S}$ $\vert$ $f$ $E_{S}$ $\vert$ $\mathtt{ifnil}$ $E_{S}$ $e_{S}$ $e_{S}$ $\vert$ $p$ $E_{S}$
 \end{tabular}
 \caption{Core Scheme grammar and evaluation contexts}
-\label{sce}
+\label{csg}
 \end{figure}
