--- a/model/core/scheme/operational-semantics.tex
+++ b/model/core/scheme/operational-semantics.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \centering
 \begin{tabular}{l}
 \vspace{5pt}
@@ -89,6 +89,6 @@ $\mathscr{E}[\mathtt{fun?}$ $v_{S}]_{S}\rightarrow\mathscr{E}[\overline{1}]$ ($v
 
 $\mathscr{E}[\mathtt{wrong}$ $\mathrm{string}]_{S}\rightarrow$ \textbf{Error}: string
 \end{tabular}
-\caption{Scheme core operational semantics}
-\label{scos}
+\caption{Core Scheme operational semantics}
+\label{csos}
 \end{figure}
