--- a/model/core/scheme/typing-rules.tex
+++ b/model/core/scheme/typing-rules.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \[
 \frac{}{\vdash_{S}TST}
 \]
@@ -33,6 +33,6 @@
 \quad
 \frac{}{\vdash_{S}\mathtt{wrong}\;\mathrm{string}:TST}
 \]
-\caption{Scheme core typing rules}
-\label{sctr}
+\caption{Core Scheme typing rules}
+\label{cstr}
 \end{figure}
