--- a/model/interoperation/haskell/operational-semantics.tex
+++ b/model/interoperation/haskell/operational-semantics.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \centering
 \begin{tabular}{l}
 \vspace{5pt}
@@ -100,6 +100,6 @@ $\mathscr{E}[^{T^{a}}HS$ $(SH^{T^{a}}$ $e_{H})]_{H}\rightarrow\mathscr{E}[e_{H}]
 % hs - label error
 $\mathscr{E}[^{T^{a}}HS$ $v_{S}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}$ ``Parametricity violated"$]$ $(v_{S}\neq SH^{T^{a}}$ $e_{H})$ \\
 \end{tabular}
-\caption{Haskell interoperation operational semantics}
-\label{hios}
+\caption{Interoperation Haskell operational semantics}
+\label{ihos}
 \end{figure}
