--- a/model/interoperation/haskell/typing-rules.tex
+++ b/model/interoperation/haskell/typing-rules.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \[
 \frac{}{\vdash_{H}L}
 \quad
@@ -10,6 +10,6 @@
 \quad
 \frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{H}\;^{T}HS\;e_{S}:T[T_{i}/T^{a}_{i}]}
 \]
-\caption{Haskell interoperation typing rules}
-\label{hitr}
+\caption{Interoperation Haskell typing rules}
+\label{ihtr}
 \end{figure}
