--- a/model/interoperation/ml/grammar.tex
+++ b/model/interoperation/ml/grammar.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \centering
 \begin{tabular}{lcl}
 \vspace{5pt}
@@ -21,6 +21,6 @@ $a$ & $=$ & Type labels (a, b, \ldots) \\
 
 $E_{M}$ & $=$ & $\cdots$ $\vert$ $^{T}MH^{T}$ $E_{H}$ $\vert$ $^{T}MS$ $E_{S}$
 \end{tabular}
-\caption{ML interoperation expressions}
-\label{mie}
+\caption{Interoperation ML grammar and evaluation contexts}
+\label{img}
 \end{figure}
