--- a/model/interoperation/ml/operational-semantics.tex
+++ b/model/interoperation/ml/operational-semantics.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \centering
 \begin{tabular}{l}
 
@@ -106,6 +106,6 @@ $\mathscr{E}[^{T^{a}}MS$ $(SM^{T^{a}}$ $v_{M})]_{M}\rightarrow\mathscr{E}[v_{M}]
 % ms - label error
 $\mathscr{E}[^{T^{a}}MS$ $v_{S}]_{M}\rightarrow\mathscr{E}[\mathtt{wrong}$ ``Parametricity violated"$]$ $(v_{S}\neq SM^{T^{a}}$ $v_{M})$
 \end{tabular}
-\caption{ML interoperation operational semantics}
-\label{mios}
+\caption{Interoperation ML operational semantics}
+\label{imos}
 \end{figure}
