--- a/model/interoperation/scheme/grammar.tex
+++ b/model/interoperation/scheme/grammar.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \centering
 \begin{tabular}{lcl}
 \vspace{5pt}
@@ -13,6 +13,6 @@ $v_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{[T]}$ $(\mathtt{cons}$ $e_{H}$ $e_{H})$ $\
 
 $E_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{T}$ $E_{H}$ $\vert$ $SM^{T}$ $E_{M}$
 \end{tabular}
-\caption{Scheme interoperation expressions}
-\label{sie}
+\caption{Interoperation Scheme grammar and evaluation contexts}
+\label{isg}
 \end{figure}
