--- a/model/interoperation/scheme/operational-semantics.tex
+++ b/model/interoperation/scheme/operational-semantics.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \centering
 \begin{tabular}{l}
 \vspace{5pt}
@@ -99,6 +99,6 @@ $\mathscr{E}[SH^{L}$ $(^{L}HS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$ \\
 % sm - lump
 $\mathscr{E}[SM^{L}$ $(^{L}MS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$
 \end{tabular}
-\caption{Scheme interoperation operational semantics}
-\label{sios}
+\caption{Interoperation Scheme operational semantics}
+\label{isos}
 \end{figure}
