--- a/model/core/haskell/operational-semantics.tex
+++ b/model/core/haskell/operational-semantics.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \centering
 \begin{tabular}{l}
 \vspace{5pt}
@@ -57,6 +57,6 @@ $\mathscr{E}[\mathtt{fix}$ $(\lambda x:T.e_{H})]_{H}\rightarrow\mathscr{E}[e_{H}
 
 $\mathscr{E}[\mathtt{wrong}^{T}$ string$]_{H}\rightarrow$ \textbf{Error}: string
 \end{tabular}
-\caption{Haskell core operational semantics}
-\label{hcos}
+\caption{Core Haskell operational semantics}
+\label{chos}
 \end{figure}
