--- a/model/core/ml/typing-rules.tex
+++ b/model/core/ml/typing-rules.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \[
 \frac{}{\vdash_{M}N}
 \quad
@@ -49,6 +49,6 @@
 \[
 \frac{\Gamma\vdash_{M}T}{\Gamma\vdash_{M}\mathtt{wrong}^{T}\;\mathrm{string}:T}
 \]
-\caption{ML core typing rules}
-\label{mctr}
+\caption{Core ML typing rules}
+\label{cmtr}
 \end{figure}
