--- a/model/interoperation/haskell/grammar.tex
+++ b/model/interoperation/haskell/grammar.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \centering
 \begin{tabular}{lcl}
 \vspace{5pt}
@@ -21,6 +21,6 @@ $a$ & $=$ & Type labels (a, b, \ldots) \\
 
 $E_{H}$ & $=$ & $\cdots$ $\vert$ $^{T}HM^{T}$ $E_{M}$ $\vert$ $^{T}HS$ $E_{S}$
 \end{tabular}
-\caption{Haskell interoperation expressions}
-\label{hie}
+\caption{Interoperation Haskell grammar and evaluation contexts}
+\label{ihg}
 \end{figure}
