--- a/model/interoperation/scheme/typing-rules.tex
+++ b/model/interoperation/scheme/typing-rules.tex
@@ -1,9 +1,9 @@
-\begin{figure}[ph!]
+\begin{figure}[p]
 \[
 \frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{H}e_{H}:T[T_{i}/T^{a}_{i}]}{\Gamma\vdash_{S}\;SH^{T}\;e_{H}:TST}
 \quad
 \frac{\Gamma\vdash_{M}T\quad\Gamma\vdash_{M}e_{M}:T[T_{i}/T^{a}_{i}]}{\Gamma\vdash_{S}\;SM^{T}\;e_{M}:TST}
 \]
-\caption{Scheme interoperation typing rules}
-\label{sitr}
+\caption{Interoperation Scheme typing rules}
+\label{istr}
 \end{figure}
