--- a/model/core/haskell/grammar.tex
+++ b/model/core/haskell/grammar.tex
@@ -1,11 +1,13 @@
 \begin{figure}[p]
 \centering
 \begin{tabular}{lcl}
-$e_{H}$ & $=$ & $v_{H}$ $\vert$ $x$ $\vert$ $e_{H}$ $e_{H}$ $\vert$ $e_{H}$ $\lbrace T\rbrace$ $\vert$ $o$ $e_{H}$ $e_{H}$ $\vert$ $\mathtt{if0}$ $e_{H}$ $e_{H}$ $e_{H}$ $\vert$ $f$ $e_{H}$ \\
+\vspace{5pt}
+
+$e_{H}$ & $=$ & $v_{H}$ $\vert$ $x$ $\vert$ $e_{H}$ $e_{H}$ $\vert$ $e_{H}$ $\lbrace T\rbrace$ $\vert$ $o$ $e_{H}$ $e_{H}$ $\vert$ $p$ $e_{H}$ $\vert$ $\mathtt{if0}$ $e_{H}$ $e_{H}$ $e_{H}$ $\vert$ $f$ $e_{H}$ \\
 
 \vspace{5pt}
 
-&& $\vert$ $\mathtt{ifnil}$ $e_{H}$ $e_{H}$ $e_{H}$ $\vert$ $\mathtt{fix}$ $e_{H}$ $\vert$ $\mathtt{wrong}^{T}$ string \\
+&& $\vert$ $\mathtt{fix}$ $e_{H}$ $\vert$ $\mathtt{wrong}^{T}$ string \\
 
 \vspace{5pt}
 
@@ -13,11 +15,15 @@ $v_{H}$ & $=$ & $\overline{n}$ $\vert$ $\mathtt{cons}$ $e_{H}$ $e_{H}$ $\vert$ $
 
 \vspace{5pt}
 
-$T$ & $=$ & $N$ $\vert$ $X$ $\vert$ $T\rightarrow T$ $\vert$ $\forall X.T$ $\vert$ $[T]$ \\
+$T$ & $=$ & $N$ $\vert$ $[T]$ $\vert$ $T\rightarrow T$ $\vert$ $X$ $\vert$ $\forall X.T$ \\
 
 \vspace{5pt}
 
-$o$ & $=$ & $\mathtt{+}$ $\vert$ $\mathtt{-}$ \\
+$o$ & $=$ & $+$ $\vert$ $-$ \\
+
+\vspace{5pt}
+
+$p$ & $=$ & $\mathtt{null?}$ \\
 
 \vspace{5pt}
 
@@ -25,11 +31,11 @@ $f$ & $=$ & $\mathtt{hd}$ $\vert$ $\mathtt{tl}$ \\
 
 \vspace{5pt}
 
-$E_{H}$ & $=$ & $[\,]_{H}$ $\vert$ $E_{H}$ $e_{H}$ $\vert$ $E_{H}$ $\lbrace T\rbrace$ $\vert$ $o$ $E_{H}$ $e_{H}$ $\vert$ $o$ $v_{H}$ $E_{H}$ $\vert$ $\mathtt{if0}$ $E_{H}$ $e_{H}$ $e_{H}$ $\vert$ $f$ $E_{H}$ \\
+$E_{H}$ & $=$ & $[\,]_{H}$ $\vert$ $E_{H}$ $e_{H}$ $\vert$ $E_{H}$ $\lbrace T\rbrace$ $\vert$ $o$ $E_{H}$ $e_{H}$ $\vert$ $o$ $\overline{n}$ $E_{H}$ $\vert$ $p$ $E_{H}$ $\vert$ $\mathtt{if0}$ $E_{H}$ $e_{H}$ $e_{H}$ \\
 
 \vspace{5pt}
 
-&& $\vert$ $\mathtt{ifnil}$ $E_{H}$ $e_{H}$ $e_{H}$ $\vert$ $\mathtt{fix}$ $E_{H}$
+&& $\vert$ $f$ $E_{H}$ $\vert$ $\mathtt{fix}$ $E_{H}$
 \end{tabular}
 \caption{Core Haskell grammar and evaluation contexts}
 \label{chg}
