--- a/model/core/ml/grammar.tex
+++ b/model/core/ml/grammar.tex
@@ -1,11 +1,13 @@
 \begin{figure}[p]
 \centering
 \begin{tabular}{lcl}
-$e_{M}$ & $=$ & $v_{M}$ $\vert$ $x$ $\vert$ $e_{M}$ $e_{M}$ $\vert$ $e_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{if0}$ $e_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $e_{M}$ $e_{M}$ \\
+\vspace{5pt}
+
+$e_{M}$ & $=$ & $v_{M}$ $\vert$ $x$ $\vert$ $e_{M}$ $e_{M}$ $\vert$ $e_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $e_{M}$ $e_{M}$ $\vert$ $p$ $e_{M}$ $\vert$ $\mathtt{if0}$ $e_{M}$ $e_{M}$ $e_{M}$ $\vert$ $f$ $e_{M}$ \\
 
 \vspace{5pt}
 
-&& $\vert$ $f$ $e_{M}$ $\vert$ $\mathtt{ifnil}$ $e_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{fix}$ $e_{M}$ $\vert$ $\mathtt{wrong}^{T}$ string \\
+&& $\vert$ $\mathtt{fix}$ $e_{M}$ $\vert$ $\mathtt{wrong}^{T}$ string $\vert$ $\mathtt{cons}$ $e_{M}$ $e_{M}$ \\
 
 \vspace{5pt}
 
@@ -13,11 +15,15 @@ $v_{M}$ & $=$ & $\overline{n}$ $\vert$ $\mathtt{cons}$ $v_{M}$ $v_{M}$ $\vert$ $
 
 \vspace{5pt}
 
-$T$ & $=$ & $N$ $\vert$ $X$ $\vert$ $T\rightarrow T$ $\vert$ $\forall X.T$ $\vert$ $[T]$ \\
+$T$ & $=$ & $N$ $\vert$ $[T]$ $\vert$ $T\rightarrow T$ $\vert$ $X$ $\vert$ $\forall X.T$ \\
 
 \vspace{5pt}
 
-$o$ & $=$ & $\mathtt{+}$ $\vert$ $\mathtt{-}$ \\
+$o$ & $=$ & $+$ $\vert$ $-$ \\
+
+\vspace{5pt}
+
+$p$ & $=$ & $\mathtt{null?}$ \\
 
 \vspace{5pt}
 
@@ -25,15 +31,11 @@ $f$ & $=$ & $\mathtt{hd}$ $\vert$ $\mathtt{tl}$ \\
 
 \vspace{5pt}
 
-$E_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $E_{M}$ $\vert$ $E_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $E_{M}$ $e_{M}$ $\vert$ $o$ $v_{M}$ $E_{M}$ \\
+$E_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $E_{M}$ $\vert$ $E_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $E_{M}$ $e_{M}$ $\vert$ $o$ $\overline{n}$ $E_{M}$ $\vert$ $p$ $E_{M}$ \\
 
 \vspace{5pt}
 
-&& $\vert$ $\mathtt{if0}$ $E_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $E_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $v_{M}$ $E_{M}$ $\vert$ $f$ $E_{M}$ \\
-
-\vspace{5pt}
-
-&& $\vert$ $\mathtt{ifnil}$ $E_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{fix}$ $E_{M}$
+&& $\vert$ $\mathtt{if0}$ $E_{M}$ $e_{M}$ $e_{M}$ $\vert$ $f$ $E_{M}$ $\vert$ $\mathtt{fix}$ $E_{M}$ $\vert$ $\mathtt{cons}$ $E_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $v_{M}$ $E_{M}$
 \end{tabular}
 \caption{Core ML grammar and evaluation contexts}
 \label{cmg}
