--- a/model/core/scheme/grammar.tex
+++ b/model/core/scheme/grammar.tex
@@ -1,11 +1,13 @@
 \begin{figure}[p]
 \centering
 \begin{tabular}{lcl}
-$e_{S}$ & $=$ & $v_{S}$ $\vert$ $x$ $\vert$ $e_{S}$ $e_{S}$ $\vert$ $o$ $e_{S}$ $e_{S}$ $\vert$ $\mathtt{if0}$ $e_{S}$ $e_{S}$ $e_{S}$ $\vert$ $\mathtt{cons}$ $e_{S}$ $e_{S}$ $\vert$ $f$ $e_{S}$ \\
+\vspace{5pt}
+
+$e_{S}$ & $=$ & $v_{S}$ $\vert$ $x$ $\vert$ $e_{S}$ $e_{S}$ $\vert$ $o$ $e_{S}$ $e_{S}$ $\vert$ $p$ $e_{S}$ $\vert$ $\mathtt{if0}$ $e_{S}$ $e_{S}$ $e_{S}$ $\vert$ $f$ $e_{S}$ $\vert$ $\mathtt{wrong}$ $\mathrm{string}$ \\
 
 \vspace{5pt}
 
-&& $\vert$ $\mathtt{ifnil}$ $e_{S}$ $e_{S}$ $e_{S}$ $\vert$ $p$ $e_{S}$ $\vert$ $\mathtt{wrong}$ $\mathrm{string}$ \\
+&& $\vert$ $\mathtt{cons}$ $e_{S}$ $e_{S}$ \\
 
 \vspace{5pt}
 
@@ -13,7 +15,11 @@ $v_{S}$ & $=$ & $\overline{n}$ $\vert$ $\mathtt{cons}$ $v_{S}$ $v_{S}$ $\vert$ $
 
 \vspace{5pt}
 
-$o$ & $=$ & $\mathtt{+}$ $\vert$ $\mathtt{-}$ \\
+$o$ & $=$ & $+$ $\vert$ $-$ \\
+
+\vspace{5pt}
+
+$p$ & $=$ & $\mathtt{null?}$ $\vert$ $\mathtt{num?}$ $\vert$ $\mathtt{list?}$ $\vert$ $\mathtt{fun?}$ \\
 
 \vspace{5pt}
 
@@ -21,15 +27,11 @@ $f$ & $=$ & $\mathtt{hd}$ $\vert$ $\mathtt{tl}$ \\
 
 \vspace{5pt}
 
-$p$ & $=$ & $\mathtt{num?}$ $\vert$ $\mathtt{list?}$ $\vert$ $\mathtt{fun?}$ \\
+$E_{S}$ & $=$ & $[\,]_{S}$ $\vert$ $E_{S}$ $e_{S}$ $\vert$ $v_{S}$ $E_{S}$ $\vert$ $o$ $E_{S}$ $e_{S}$ $\vert$ $o$ $\overline{n}$ $E_{S}$ $\vert$ $p$ $E_{S}$ $\vert$ $\mathtt{if0}$ $E_{S}$ $e_{S}$ $e_{S}$ $\vert$ $f$ $E_{S}$ \\
 
 \vspace{5pt}
 
-$E_{S}$ & $=$ & $[\,]_{S}$ $\vert$ $E_{S}$ $e_{S}$ $\vert$ $v_{S}$ $E_{S}$ $\vert$ $o$ $E_{S}$ $e_{S}$ $\vert$ $o$ $v_{S}$ $E_{S}$ $\vert$ $\mathtt{if0}$ $E_{S}$ $e_{S}$ $e_{S}$ $\vert$ $\mathtt{cons}$ $E_{S}$ $e_{S}$ \\
-
-\vspace{5pt}
-
-&& $\vert$ $\mathtt{cons}$ $v_{S}$ $E_{S}$ $\vert$ $f$ $E_{S}$ $\vert$ $\mathtt{ifnil}$ $E_{S}$ $e_{S}$ $e_{S}$ $\vert$ $p$ $E_{S}$
+&& $\vert$ $\mathtt{cons}$ $E_{S}$ $e_{S}$ $\vert$ $\mathtt{cons}$ $v_{S}$ $E_{S}$
 \end{tabular}
 \caption{Core Scheme grammar and evaluation contexts}
 \label{csg}
